2006-07-08  Michal Nazarewicz  <mina86/AT/mina86.com>

	* quotes.txt: + new quotes by Mikolaj Rej and Stanislaw Lem
	+ new authors: Doug Larson, Leszek Kolakowski, Zygmunt Mycielski
	+ Stanislaw Lem death date added

	* installkernel: + --overwrite option added
	+ --no-nice fixed

2006-06-03  Michal Nazarewicz  <mina86/AT/tlen.pl>

	* Makefile: + DEBUG support fixed (LDFLAGS had -s)

	* README: + security warning about mountiso added
	* mountiso.c: + nosuid,noexec,nodev,owner added to options

	* quotes.txt: + few typos fixed and unified spaces at end of sentence

	* mkpkg: New file

2006-05-19  Michal Nazarewicz  <mina86/AT/tlen.pl>

	* FvwmTransFocus.c: + ignores focus change if changed to the same wnd

2006-05-06  Michal Nazarewicz  <mina86/AT/tlen.pl>

	* installkernel: + renice was called incorrectly

2006-04-30  Michal Nazarewicz  <mina86/AT/tlen.pl>

	* getlyrics.pl: + --artist and --song otpions removed.
	+ --mpd and --pipe options changed it's format.
	+ --args, --file, --read and --mpc options added.

	* getlyrics.pl: + bug fixed

	* virtman.sh: New file
	* Makefile, README, slack-desc: + virtman.sh added

2006-04-29  Michal Nazarewicz  <mina86/AT/tlen.pl>

	* ivona.sh: + added -R switch
	+ added configuration file
	+ ivonka -> ivona
	+ added configurable sed script
	+ exec added

	* ivona.sh: New file
	* Makefile, README, slack-desc: + ivona.sh added

	* getlyrics.pl: + --mpd and --pipe options added

------- New Release ----------------------------------------------------------

2006-04-27  Michal Nazarewicz  <mina86/AT/tlen.pl>

	* FvwmTransFocus: + error messages are printed only when debug's on

	* Makefile: + FvwmTransFocus installer added

	* slack-desc: + new applications added

	* quotes.txt: + new quote from IRC

	* README: + justification fixed

	* Makefile: + mountiso and umountiso are installd in /usr/bin
	+ games are installed in /usr/local/games
	+ DEBUG added

	* mpd-show.c: + division by 0 when unknown total length bug fixed
