@@ -1,6 +1,6 @@
 
                      Tiny Applications Collection
-                     $Date: 2006/06/03 12:11:34 $
+                     $Date: 2006/08/01 02:44:29 $
 
 Tiny Applications Collection is a set of small programs, shell scripts
 and other  things which  may be usefull  in everyday life.   There are
@@ -80,6 +80,11 @@ At the moment the collection includes:
    Interent conection to work unless  it has all required MP3s cached.
    IVONA is  a Polish synthetiser so  the script is  rather useful for
    Poles though it may be used as a base for some English synthetiser.
+
+ * lesspipe -  an input processor  for less pager  which automatically
+   uncompresses  compressed  files, list  contents  of archives,  list
+   contents of a  directory, download file from the  Internet and many
+   other.
 
  * load -  shows CPU  load, memory and  net traffic  statistics.  It's
    mostly  ment for  people who  are  curious how  to callculate  such
